# cpp_toolbelt

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  bitset.h  clock.h  fd_test.cc  hexdump.cc  mutex.h  sockets.cc
.github/workflows/: ci.yml
toolbelt/: BUILD.bazel  bitset.h  clock.h  color.cc  color.h  fd.cc  fd.h  fd_test.cc  hexdump.cc  hexdump.h  logging.cc  logging.h  logging_test.cc  payload_buffer.cc  payload_buffer.h  payload_buffer_test.cc  pipe.cc  pipe.h  pipe_test.cc  sockets.cc  sockets.h  sockets_test.cc  stacktrace.cc  stacktrace.h  stacktrace_test.cc  table.cc  table.h  table_test.cc  triggerfd.cc  triggerfd.h
toolbelt/manual_socket_programs/: BUILD.bazel  network_receiver.cc  network_sender.cc  tcp_receiver.cc  tcp_sender.cc
