module(
    name = "toolbelt",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "googletest", version = "1.15.2", repo_name = "com_google_googletest")

# Coroutines
http_archive(
    name = "coroutines",
    sha256 = "44cfc56924e4aa338fbf6c424a8f5db2e6e7d88e27666fd137aeb6cb67c236e1",
    strip_prefix = "co-26f5da14c994276ab038f7ad512ca37ba32f19dc",
    urls = ["https://github.com/dallison/co/archive/26f5da14c994276ab038f7ad512ca37ba32f19dc.tar.gz"],
)

# For local debugging of co coroutine library.
# bazel_dep(name = "coroutines")
# local_path_override(
#   module_name = "coroutines",
#   path = "../co",
# )

