module(
    name = "toolbelt",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")


# Coroutines
http_archive(
    name = "coroutines",
    integrity = "sha256-TNSGNjwZjsIomPfF0G+YiQGawmPk73fZ65HI9+qKM9s=",
    strip_prefix = "co-3.0.0",
    urls = ["https://github.com/dallison/co/releases/download/3.0.0/co-3.0.0.tar.gz"],
)

# For local debugging of co coroutine library.
# bazel_dep(name = "coroutines")
# local_path_override(
#   module_name = "coroutines",
#   path = "../co",
# )

