package(default_visibility = ["//visibility:public"])

cc_library(
    name = "toolbelt",
    srcs = [
        "color.cc",
        "fd.cc",
        "hexdump.cc",
        "logging.cc",
        "pipe.cc",
        "sockets.cc",
        "table.cc",
        "triggerfd.cc",
        "payload_buffer.cc",
    ],
    hdrs = [
        "bitset.h",
        "clock.h",
        "color.h",
        "fd.h",
        "hexdump.h",
        "logging.h",
        "mutex.h",
        "pipe.h",
        "sockets.h",
        "table.h",
        "triggerfd.h",
        "payload_buffer.h",
    ],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@coroutines//:co",
    ],
)

cc_test(
    name = "fd_test",
    size = "small",
    srcs = ["fd_test.cc"],
    deps = [
        ":toolbelt",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "table_test",
    size = "small",
    srcs = ["table_test.cc"],
    deps = [
        ":toolbelt",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "pipe_test",
    size = "small",
    srcs = ["pipe_test.cc"],
    deps = [
        ":toolbelt",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "payload_buffer_test",
    srcs = [
        "payload_buffer_test.cc",
    ],
    deps = [
        "@com_google_googletest//:gtest",
        ":toolbelt",
    ],
)


