package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "toolbelt",
    srcs = [
        "color.cc",
        "fd.cc",
        "hexdump.cc",
        "logging.cc",
        "payload_buffer.cc",
        "pipe.cc",
        "sockets.cc",
        "table.cc",
        "triggerfd.cc",
        "stacktrace.cc",
    ],
    hdrs = [
        "bitset.h",
        "clock.h",
        "color.h",
        "fd.h",
        "hexdump.h",
        "logging.h",
        "mutex.h",
        "payload_buffer.h",
        "pipe.h",
        "sockets.h",
        "table.h",
        "triggerfd.h",
        "stacktrace.h",
    ],
    deps = [
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:span",
        "@coroutines//:co",
    ],
)

cc_test(
    name = "fd_test",
    size = "small",
    srcs = ["fd_test.cc"],
    deps = [
        ":toolbelt",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "table_test",
    size = "small",
    srcs = ["table_test.cc"],
    deps = [
        ":toolbelt",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
        "@googletest//:gtest_main",
    ],
)
cc_test(
    name = "stacktrace_test",
    size = "small",
    srcs = ["stacktrace_test.cc"],
    deps = [
        ":toolbelt",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
        "@googletest//:gtest_main",
    ],
)
cc_test(
    name = "pipe_test",
    size = "small",
    srcs = ["pipe_test.cc"],
    deps = [
        ":toolbelt",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:status_matchers",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "sockets_test",
    size = "small",
    srcs = ["sockets_test.cc"],
    deps = [
        ":toolbelt",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:status_matchers",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "payload_buffer_test",
    srcs = [
        "payload_buffer_test.cc",
    ],
    deps = [
        ":toolbelt",
        "@googletest//:gtest",
    ],
)
